--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "mongoose": "^6.1.6",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "swagger-jsdoc": "^6.0.0",
+    "swagger-ui-express": "^4.3.0"
   }
 }
